mysterious issues with iron router on iphone got fixed themselves, home screen scroll-lock, keyboard handling by hiding logo

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -63,7 +63,7 @@ ion-side-menu.menu-left.menu {
 	-webkit-align-items: center;
 	align-items: center;
 	-webkit-justify-content: center;
-	height: 35vh;
+	height: 30vh;
 }
 .logo-container-login img {
 	height: 22vh;
